--- a/src/slim/partials/partial1.slim
+++ b/src/slim/partials/partial1.slim
@@ -1,12 +1,1 @@
-doctype html
-html
-  head
-    title Slim Examples
-    javascript:
-      alert('Slim supports embedded javascript!')
-
-  body
-    h1 Markup examples
-
-    #content
-      p This example shows you how a basic Slim file looks like.
+p This is the partial for view 1.
