--- a/src/slim/index.slim
+++ b/src/slim/index.slim
@@ -6,10 +6,11 @@ html.no-js lang="en" ng-app="myApp"
     title My AngularJS App
     meta content="" name="description"
     meta content="width=device-width, initial-scale=1" name="viewport"
-    link href="bower_components/html5-boilerplate/css/normalize.css" rel="stylesheet"
-    link href="bower_components/html5-boilerplate/css/main.css" rel="stylesheet"
+
+    link href="css/normalize.css" rel="stylesheet"
+    link href="css/main.css" rel="stylesheet"
     link href="css/app.css" rel="stylesheet"
-    script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"
+    script src="js/modernizr-2.6.2.min.js"
   body
     ul.menu
       li
@@ -22,8 +23,8 @@ html.no-js lang="en" ng-app="myApp"
       | Angular seed app: v
       span app-version=""
 
-    script src="bower_components/angular/angular.js"
-    script src="bower_components/angular-route/angular-route.js"
+    script src="js/angular.js"
+    script src="js/angular-route.js"
     script src="js/app.js"
     script src="js/services.js"
     script src="js/controllers.js"
