--- a/src/slim/index.slim
+++ b/src/slim/index.slim
@@ -9,7 +9,7 @@ html.no-js lang="en" ng-app="myApp"
 
     link href="css/normalize.css" rel="stylesheet"
     link href="css/main.css" rel="stylesheet"
-    link href="css/app.css" rel="stylesheet"
+    link href="css/style.css" rel="stylesheet"
     script src="js/modernizr-2.6.2.min.js"
   body
     ul.menu
@@ -25,8 +25,4 @@ html.no-js lang="en" ng-app="myApp"
 
     script src="js/angular.js"
     script src="js/angular-route.js"
-    script src="js/app.js"
-    script src="js/services.js"
-    script src="js/controllers.js"
-    script src="js/filters.js"
-    script src="js/directives.js"
+    script src="js/all.js"
