Use angular min

--- a/src/slim/index.slim
+++ b/src/slim/index.slim
@@ -23,6 +23,6 @@ html.no-js lang="en" ng-app="myApp"
       | Angular seed app: v
       span app-version=""
 
-    script src="js/angular.js"
-    script src="js/angular-route.js"
+    script src="js/angular.min.js"
+    script src="js/angular-route.min.js"
     script src="js/all.js"
