Include bootstrap and jquery

--- a/src/slim/index.slim
+++ b/src/slim/index.slim
@@ -9,8 +9,13 @@ html.no-js lang="en" ng-app="myApp"
 
     link href="css/normalize.css" rel="stylesheet"
     link href="css/main.css" rel="stylesheet"
+    link href="css/bootstrap.min.css" rel="stylesheet"
+    link href="css/bootstrap-theme.min.css" rel="stylesheet"
     link href="css/style.css" rel="stylesheet"
     script src="js/modernizr-2.6.2.min.js"
+    script src="js/jquery.min.js"
+    script src="js/bootstrap.min.js"
+
   body
     ul.menu
       li
