--- a/src/slim/index.slim
+++ b/src/slim/index.slim
@@ -30,4 +30,4 @@ html.no-js lang="en" ng-app="myApp"
 
     script src="js/angular.min.js"
     script src="js/angular-route.min.js"
-    script src="js/all.js"
+    script src="js/all.min.js"
