--- a/src/slim/partials/partial1.slim
+++ b/src/slim/partials/partial1.slim
@@ -1,1 +1,7 @@
-p This is the partial for view 1.
+ion-view title="View 1"
+  ion-content has-bouncing="true"
+    p This is the partial for view 1.
+
+    div
+      | Angular seed app: v
+      span app-version=""
