--- a/src/slim/partials/partial2.slim
+++ b/src/slim/partials/partial2.slim
@@ -1,4 +1,6 @@
-p This is the partial for view 2.
-p
-  | Showing of 'interpolate' filter:
-  | {{ 'Current version is v%VERSION%.' | interpolate }}
+ion-view title="View 2"
+  ion-content has-bouncing="true"
+    p This is the partial for view 2.
+    p
+      | Showing of 'interpolate' filter:
+      | {{ 'Current version is v%VERSION%.' | interpolate }}
