Use controllerAs with vm

--- a/src/slim/partials/partial2.slim
+++ b/src/slim/partials/partial2.slim
@@ -2,5 +2,7 @@ ion-view title="View 2"
   ion-content has-bouncing="true"
     p This is the partial for view 2.
     p
+      | {{ myCtrl2.msg }}
+    p
       | Showing of 'interpolate' filter:
       | {{ 'Current version is v%VERSION%.' | interpolate }}
