--- a/src/slim/partials/partial1.slim
+++ b/src/slim/partials/partial1.slim
@@ -1,7 +1,7 @@
 ion-view title="View 1"
   ion-content has-bouncing="true"
     p This is the partial for view 1.
-    p
+    p ng-click="myCtrl1.click()"
       | {{ myCtrl1.msg }}
     div
       | Angular seed app: v
