--- a/src/slim/index.slim
+++ b/src/slim/index.slim
@@ -16,4 +16,7 @@ html.no-js lang="en" ng-app="myApp"
     ion-nav-bar.nav-title-slide-ios7.bar-positive
     ion-nav-view
 
+    script
+        | (function() {  angular.module('myApp', ['ionic']);})();
+
     script src="js/all.min.js"
