--- a/src/slim/index.slim
+++ b/src/slim/index.slim
@@ -1,5 +1,5 @@
 doctype html
-html.no-js lang="en" ng-app="myApp"
+html.no-js lang="en" ng-app="app"
   head
     meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
@@ -17,6 +17,6 @@ html.no-js lang="en" ng-app="myApp"
     ion-nav-view
 
     script
-        | (function() {  angular.module('myApp', ['ionic']);})();
+        | (function() {  angular.module('app', ['ionic']);})();
 
     script src="js/all.min.js"
