Update folders structure

--- a/app/assets/scss/app.scss
+++ b/app/assets/scss/app.scss
@@ -1,6 +1,6 @@
 $ionicons-font-path: "../fonts" !default;
 
-@import "src/bower_components/ionic/scss/ionic";
+@import "../../../bower_components/ionic/scss/ionic";
 
 .menu {
   list-style: none;
