--- a/app/index.slim
+++ b/app/index.slim
@@ -19,4 +19,4 @@ html.no-js lang="en" ng-app="app"
     script
         | (function() {  angular.module('app', ['ionic']);})();
 
-    script src="js/all.min.js"
+    script src="js/app-script.min.js"
