Update slim-main gulp task, task add script for debug

--- a/app/index.slim
+++ b/app/index.slim
@@ -9,6 +9,9 @@ html.no-js lang="en" ng-app="app"
 
     link href="css/style.min.css" rel="stylesheet"
 
+    | <!-- build:jsForDebug -->
+        | js for debug
+    | <!-- endbuild -->
     / script src="cordova.js"
     script src="js/lib/ionic.bundle.js"
 
