--- a/app/index.slim
+++ b/app/index.slim
@@ -10,7 +10,7 @@ html.no-js lang="en" ng-app="app"
     link href="css/style.min.css" rel="stylesheet"
 
     | <!-- build:jsForDebug -->
-        | js for debug
+        | <!-- js for debug -->
     | <!-- endbuild -->
     / script src="cordova.js"
     script src="js/lib/ionic.bundle.js"
