--- a/app/index.slim
+++ b/app/index.slim
@@ -12,7 +12,8 @@ html.no-js lang="en" ng-app="app"
     | <!-- build:jsForDebug -->
         <!-- js for debug -->
     | <!-- endbuild -->
-    / script src="cordova.js"
+    <!-- cordova script (this will be a 404 during development) -->
+    script src="cordova.js"
     script src="js/lib/ionic.bundle.js"
 
   body
