Update index page

--- a/app/index.slim
+++ b/app/index.slim
@@ -27,5 +27,6 @@ html.no-js lang="en" ng-app="app"
 
     script src="js/lib/angular.min.js"
     script src="js/lib/angular-route.min.js"
+    script src="js/lib/mobile-angular-ui.min.js"
 
     script src="js/app-script.min.js"
