Include css for index page

--- a/app/index.slim
+++ b/app/index.slim
@@ -7,6 +7,7 @@ html.no-js lang="en" ng-app="app"
     meta content="" name="description"
     meta content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" name="viewport"
 
+    link href="css/mobile-angular-ui-base.min.css" rel="stylesheet"
     link href="css/style.min.css" rel="stylesheet"
 
     | <!-- build:jsForDebug -->
