--- a/app/views/partial2.slim
+++ b/app/views/partial2.slim
@@ -1,8 +1,7 @@
-ion-view title="View 2"
-  ion-content has-bouncing="true"
-    p This is the partial for view 2.
-    p
-      | {{ myCtrl2.msg }}
-    p
-      | Showing of 'interpolate' filter:
-      | {{ 'Current version is v%VERSION%.' | interpolate }}
+p
+  | This is the partial for view 2.
+p
+  | {{ myCtrl2.msg }}
+p
+  | Showing of 'interpolate' filter:
+  | {{ 'Current version is v%VERSION%.' | interpolate }}
