--- a/app/index.slim
+++ b/app/index.slim
@@ -1,5 +1,5 @@
 doctype html
-html.no-js lang="en" ng-app="app"
+html.no-js lang="en" ng-app="app" ng-controller="AppController as appCtrl"
   head
     meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
@@ -29,5 +29,6 @@ html.no-js lang="en" ng-app="app"
     script src="js/lib/angular-route.min.js"
     script src="js/lib/mobile-angular-ui.min.js"
     script src="js/lib/angular-translate.min.js"
+    script src="js/lib/angular-ui-router.min.js"
 
     script src="js/app-script.min.js"
