--- a/app/views/partial1.slim
+++ b/app/views/partial1.slim
@@ -1,7 +1,57 @@
-p
-  | This is the partial for view 1.
-p ng-click="myCtrl1.click()"
-  | {{ myCtrl1.msg }}
-div
-  | Angular seed app: v
-  span app-version=""
+.container
+  .row.text-center
+    h1 translate=""
+      | {{ 'TITLE' }}
+    p translate=""
+      | {{ 'FOO' }}
+
+  .row
+    .col-sm-1.col-sm-offset-4
+      button class="btn btn-primary" ng-click="appCtrl.setLang('en')"
+        | English
+    .col-sm-1.col-sm-offset-1
+      button class="btn btn-primary" ng-click="appCtrl.setLang('ru')"
+        | Русский
+    .col-sm-1.col-sm-offset-1
+      button class="btn btn-primary" ng-click="appCtrl.setLang('de')"
+        | Deutsch
+
+  .row
+    p
+      | This is the partial for view 1.
+    p ng-click="myCtrl1.click()"
+      | {{ myCtrl1.msg }}
+    div
+      | Angular seed app: v
+      span app-version=""
+
+  .raw
+    ul
+      li
+        a ng-href="/en/view1"
+          img src="img/en.png"
+            | English
+      li
+        a ui-sref="en/view1"
+          img src="img/ru.png"
+            | Russian
+      li
+        a href="" ng-click="appCtrl.setLang('de')"
+          img src="img/de.png"
+            | German
+      li
+        a href="" ng-click="appCtrl.setLang('uk')"
+          img src="img/uk.png"
+            | Ukrainian
+      li
+        a href="" ng-click="appCtrl.setLang('zh-cn')"
+          img src="img/zhcn.png"
+            | Simplified Chinese
+      li
+        a href="" ng-click="appCtrl.setLang('zh-tw')"
+          img src="img/zhtw.png"
+            | Traditional Chinese
+      li
+        a href="" ng-click="appCtrl.setLang('fr')"
+          img src="img/fr.png"
+            | French
