Update index page

--- a/app/index.slim
+++ b/app/index.slim
@@ -23,12 +23,12 @@ html.no-js lang="en" ng-app="app"
       navbar-top.navbar.navbar-app.navbar-absolute-top
       navbar-bottom.navbar.navbar-app.navbar-absolute-bottom
       .app-body
-        ng-view.app-content
+        ui-view.app-content
 
     script src="js/lib/angular.min.js"
-    script src="js/lib/angular-route.min.js"
+    script src="js/lib/angular-ui-router.min.js"
     script src="js/lib/mobile-angular-ui.min.js"
     script src="js/lib/angular-translate.min.js"
-    script src="js/lib/angular-ui-router.min.js"
 
     script src="js/app-script.min.js"
+
