--- a/app/views/navbarTop.slim
+++ b/app/views/navbarTop.slim
@@ -5,3 +5,8 @@
   .btn.btn-navbar.sidebar-toggle ng-click="toggle('mainSidebar')"
     i.fa.fa-bars
     | Menu
+
+.btn-group.pull-right
+  .btn.btn-navbar
+    .span translate=""
+      | {{ 'TITLE' }}&#32;user!&#32;
