--- a/app/views/partial2.slim
+++ b/app/views/partial2.slim
@@ -1,7 +1,9 @@
-p
-  | This is the partial for view 2.
-p
-  | {{ myCtrl2.msg }}
-p
-  | Showing of 'interpolate' filter:
-  | {{ 'Current version is v%VERSION%.' | interpolate }}
+.scrollable
+  .scrollable-content
+    p
+      | This is the partial for view 2.
+    p
+      | {{ myCtrl2.msg }}
+    p
+      | Showing of 'interpolate' filter:
+      | {{ 'Current version is v%VERSION%.' | interpolate }}
