--- a/app/views/sidebar.slim
+++ b/app/views/sidebar.slim
@@ -2,9 +2,9 @@ h1.app-name My App
 .scrollable
   .scrollable-content
     .list-group bubble="" target="mainSidebar" toggle="off"
-      a.list-group-item href="#/view1"
-        | view1
+      a.list-group-item ui-sref="lang.view.first"
+        | First view
         i.fa.fa-chevron-right.pull-right
-      a.list-group-item href="#/view2"
-        | view2
+      a.list-group-item ui-sref="lang.view.second"
+        | Second view
         i.fa.fa-chevron-right.pull-right
