--- a/app/views/navbarBottom.slim
+++ b/app/views/navbarBottom.slim
@@ -1,5 +1,5 @@
 .btn-group.justified
-  a.btn.btn-navbar.btn-icon-only href="#/view1"
+  a.btn.btn-navbar.btn-icon-only ui-sref="lang.view.first"
     i.fa.fa-home.fa-navbar
-  a.btn.btn-navbar.btn-icon-only href="#/view2"
+  a.btn.btn-navbar.btn-icon-only ui-sref="lang.view.second"
     i.fa.fa-list.fa-navbar
