--- a/app/views/navbarBottom.slim
+++ b/app/views/navbarBottom.slim
@@ -1,5 +1,5 @@
 .btn-group.justified
-  a.btn.btn-navbar.btn-icon-only ui-sref="lang.view.first"
+  a.btn.btn-navbar.btn-icon-only ui-sref="lang.view.id({id: 1})"
     i.fa.fa-home.fa-navbar
-  a.btn.btn-navbar.btn-icon-only ui-sref="lang.view.second"
+  a.btn.btn-navbar.btn-icon-only ui-sref="lang.view.id({id: 2})"
     i.fa.fa-list.fa-navbar
