--- a/app/views/sidebar.slim
+++ b/app/views/sidebar.slim
@@ -2,9 +2,9 @@ h1.app-name My App
 .scrollable
   .scrollable-content
     .list-group bubble="" target="mainSidebar" toggle="off"
-      a.list-group-item ui-sref="lang.view.first"
+      a.list-group-item ui-sref="lang.view.id({ id: 1 })"
         | First view
         i.fa.fa-chevron-right.pull-right
-      a.list-group-item ui-sref="lang.view.second"
+      a.list-group-item ui-sref="lang.view.id({ id: 2 })"
         | Second view
         i.fa.fa-chevron-right.pull-right
