--- a/app/index.slim
+++ b/app/index.slim
@@ -14,7 +14,7 @@ html.no-js lang="en" ng-app="app"
       <!-- js for debug -->
     | <!-- endbuild -->
     <!-- cordova script (this will be a 404 during development) -->
-    / script src="cordova.js"
+    script src="cordova.js"
 
   body
     sidebar#mainSidebar.sidebar.sidebar-left parent-active-class="sidebar-left-in" toggleable="toggle('mainSidebar')"
