--- a/app/views/sidebar.slim
+++ b/app/views/sidebar.slim
@@ -1,4 +1,4 @@
-h1.app-name My App
+h1.app-name ng-bind="appCtrl.name"
 .scrollable
   .scrollable-content
     .list-group bubble="" target="mainSidebar" toggle="off"
