Update setting controller

--- a/app/views/navbarBottom.slim
+++ b/app/views/navbarBottom.slim
@@ -1,5 +1,5 @@
 .btn-group.justified
-  a.btn.btn-navbar.btn-icon-only ui-sref="lang.view.id({id: 1})"
+  a.btn.btn-navbar.btn-icon-only ui-sref="lang.home"
     i.fa.fa-home.fa-navbar
-  a.btn.btn-navbar.btn-icon-only ui-sref="lang.view.id({id: 2})"
+  a.btn.btn-navbar.btn-icon-only ui-sref="lang.setting"
     i.fa.fa-list.fa-navbar
