--- a/app/views/setting.slim
+++ b/app/views/setting.slim
@@ -3,7 +3,7 @@
     p
       | This is the partial for view 2.
     p
-      | {{ myCtrl2.msg }}
+      | {{ settingCtrl.msg }}
     p
       | Showing of 'interpolate' filter:
       | {{ 'Current version is v%VERSION%.' | interpolate }}
