--- a/app/views/sidebar.slim
+++ b/app/views/sidebar.slim
@@ -2,9 +2,9 @@ h1.app-name ng-bind="appCtrl.name"
 .scrollable
   .scrollable-content
     .list-group bubble="" target="mainSidebar" toggle="off"
-      a.list-group-item ui-sref="lang.view.id({ id: 1 })"
-        | First view
+      a.list-group-item ui-sref="lang.home"
+        | Home
         i.fa.fa-chevron-right.pull-right
-      a.list-group-item ui-sref="lang.view.id({ id: 2 })"
-        | Second view
+      a.list-group-item ui-sref="lang.setting"
+        | Setting
         i.fa.fa-chevron-right.pull-right
