--- a/app/views/home.slim
+++ b/app/views/home.slim
@@ -9,17 +9,17 @@
 
       .row
         .col-sm-2.col-sm-offset-3
-          a ui-sref="lang.view.id({ lang: 'en', id: 1 })"
+          a ui-sref="lang.home({ lang: 'en' })"
             .btn.btn-primary
               img src="img/en.png"
                 | &#32;English
         .col-sm-2.col-sm-offset-1
-          a ui-sref="lang.view.id({ lang: 'ru', id: 1 })"
+          a ui-sref="lang.home({ lang: 'ru' })"
             .btn.btn-primary
               img src="img/ru.png"
                 | &#32;Русский
         .col-sm-2.col-sm-offset-1
-          a ui-sref="lang.view.id({ lang: 'de', id: 1 })"
+          a ui-sref="lang.home({ lang: 'de' })"
             .btn.btn-primary
               img src="img/de.png"
                 | &#32;Deutsch
