--- a/app/views/navbarTop.slim
+++ b/app/views/navbarTop.slim
@@ -7,5 +7,7 @@
 
 .btn-group.pull-right
   .btn.btn-navbar
-    .span translate=""
-      | {{ 'TITLE' }}&#32;user!&#32;
+    span.span translate=""
+      | {{ 'TITLE' }}
+    span
+      | &#32;user!&#32;
