--- a/app/index.slim
+++ b/app/index.slim
@@ -1,5 +1,5 @@
 doctype html
-html.no-js lang="en" ng-app="app" ng-controller="AppController as appCtrl"
+html.no-js lang="en" ng-app="app" ng-controller="AppController as appCtrl" ng-strict-di=""
   head
     meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
